--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
     "pg": "^6.1.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
