--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "pg": "^6.1.0",
+    "promise": "^7.1.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
