--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
+    "fuzzyset.js": "0.0.1",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "pg": "^6.1.0",
