--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w & nodemon server.js"
+    "watch": "webpack -w",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
