Add package lock

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppybook",
+  "name": "draft-kings-pga",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -27,14 +27,14 @@
     "path": "^0.12.7",
     "pg": "^6.1.0",
     "promise": "^7.1.1",
-    "react": "^15.3.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^0.30.6",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.6.2",
+    "redux": "^4.2.0",
     "redux-logger": "^2.7.0",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.4.2",
     "request": "^2.78.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.24.8",
